# AI_Uebungen

./: pyproject.toml
Aufgabe1/puzzle8_template/: a_star.py  board.py  board_visualizer.py  idfs.py  puzzle8.py
Aufgabe1/puzzle8_template_2/: a_star.py  board.py  idfs.py  puzzle8.py
Aufgabe2/Kalah/: Kalah.java  KalahBoard.java
Aufgabe2/kalah/: Kalah.java  KalahBoard.java
Aufgabe3/: KartenfaerbungDeutschland.py  Kryptogram_Practice.py  Lehrbeispiel_loesen.py  Sudoku_Practice.py  ab3.py  ab3_2_timetable.ipynb  ab3_3_einfaerben.ipynb  ab3_4_packungsproblem.ipynb  packungsproblem.py  zebraPuzzle_Practice.py
