[project]
name = "ai-uebungen"
version = "0.1.0"
description = ""
authors = [
    {name = "muellerdom",email = "do161mue@htwg-konstanz.de"}
]
requires-python = "^3.14"
dependencies = [
    "ipykernel (>=7.2.0,<8.0.0)",
    "python-constraint (>=1.4.0,<2.0.0)",
    "numpy (>=2.4.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
